clusters/lab/dawarich/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dawarich
  namespace: dawarich
spec:
  selector:
    app.kubernetes.io/name: dawarich
  ports:
    - name: http
      port: 80
      targetPort: http
